<resources>
    <string name="abort">Abort</string>
    <string name="android_version_confirm">You device system version is too old for MonoMod, this may leads to crash of 0Harmony framework, update to Android M or later if possible</string>
    <string name="app_name">SMAPI Installer</string>
    <string name="button_compat">Compat</string>
    <string name="button_donation_text">Donation</string>
    <string name="button_gplay">View in Play Store</string>
    <string name="button_install">Install</string>
    <string name="button_logs">Logs</string>
    <string name="button_nexus">Nexus</string>
    <string name="button_qq_group_1_text">QQ Group 1: 860453392</string>
    <string name="button_qq_group_2_text">QQ Group 2: 1078428449</string>
    <string name="button_release">Release</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_content">Are you sure to delete it?</string>
    <string name="confirm_disable_mod">Are you sure to disable it?</string>
    <string name="continue_text">Continue</string>
    <string name="download_unpack_success">Download and unpack success</string>
    <string name="downloading">Downloading: %1$d KB / %2$d KB</string>
    <string name="duplicate_mod_found">Found duplicate copy of mod, please delete duplicate of them: %s</string>
    <string name="error">Error</string>
    <string name="error_depends_on_mod">The %1$s is depends on %2$s, please install it first</string>
    <string name="error_depends_on_mod_version">The %1$s is depends on %2$s %3$s version or later, please update it first</string>
    <string name="error_failed_to_create_file">Failed to create target file : %s</string>
    <string name="error_failed_to_download">Failed to download target resources</string>
    <string name="error_failed_to_repair">Failed to repair SMAPI environment</string>
    <string name="error_game_not_found">Can\'t find the Stardew Valley\'s apk, did you install it?</string>
    <string name="error_illegal_path">Please input a valid path</string>
    <string name="error_no_supported_game_version">Game version not supported, upgrade or download compat package first</string>
    <string name="error_smapi_not_installed">SMAPI has not installed yet, press install first</string>
    <string name="extracting_package">Extracting Install Package</string>
    <string name="failed_to_patch_game">Failed to patch the game, please ask developer for help</string>
    <string name="failed_to_process_manifest">Failed to process AndroidManifest.xml file</string>
    <string name="failed_to_sign_game">Failed to sign the game, please ask developer for help</string>
    <string name="failed_to_unpack_smapi_files">Failed to unpack smapi files</string>
    <string name="info">Info</string>
    <string name="input">Input</string>
    <string name="input_mods_path">Please input mods path</string>
    <string name="install_progress_title">Install Progress</string>
    <string name="installing_package">Installing</string>
    <string name="locale_pack">Locale Pack</string>
    <string name="menu_about">About</string>
    <string name="menu_config">Config</string>
    <string name="menu_config_edit">Edit</string>
    <string name="menu_download">Download</string>
    <string name="menu_help">Help</string>
    <string name="menu_install">Install</string>
    <string name="nav_header_subtitle">ZaneYork@qq.com</string>
    <string name="nav_header_title">SMAPI Installer</string>
    <string name="ok">OK</string>
    <string name="patching_package">Patching SMAPI</string>
    <string name="progress">Progress</string>
    <string name="save">Save</string>
    <string name="settings_check_for_updates">Check For Updates</string>
    <string name="settings_developer_mode">Developer Mode</string>
    <string name="settings_set_language">Language</string>
    <string name="settings_set_mod_path">Set Mods Path</string>
    <string name="settings_translation_service">Translation Service</string>
    <string name="settings_verbose_logging">Verbose Logging</string>
    <string name="signing_package">Signing</string>
    <string name="smapi_game_name">SMAPI Stardew Valley</string>
    <string name="smapi_version">SMAPI Version: 3.18.3.3</string>
    <string name="text_install_tip1">Notes: Game version 1.5.6.39 or later is required.</string>
    <string name="text_install_tip2">The base game is required when updating/installing.</string>
    <string name="unpacking_smapi_files">Unpacking</string>
    <string name="toast_redpacket_message" translatable="false">红包码已复制\n支付宝首页搜索“9188262” 立即领红包</string>
    <string name="icon_desc" translatable="false">icon</string>
    <string name="mod_version_update_text" translatable="false">%1$s -> %2$s</string>
    <string name="sort_by" translatable="false">Sort by</string>
    <string name="text_too_large" translatable="false">Text file is too large for editor</string>
    <string name="open_with" translatable="false">Open With</string>
    <string name="no_update_text" translatable="false">All mods are up to date</string>
    <string name="app_update_detected" translatable="false">New version detected: %1$s</string>
    <string name="parser" translatable="false">Parser</string>
    <string name="mod_version_update_checking" translatable="false">Checking for mod updates</string>
    <string name="smapi_version_runing" translatable="false">Latest running: %s</string>
    <string name="settings_disable_mono_mod" translatable="false">Disable Harmony</string>
    <string name="settings_set_max_log_size" translatable="false">Max Log Size</string>
    <string name="button_qq_group_text" translatable="false">QQ Group</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="settings_advanced_mode" translatable="false">Advanced Patch Mode</string>
    <string name="button_initial" translatable="false">Initial</string>
    <string name="error_directory_exists_with_same_filename" translatable="false">%1$s is not a directory, please delete it manually.</string>
    <string name="error_patch_crc_incorrect" translatable="false">Patch %1$s failed: CRC (%2$s))</string>
    <string name="settings_rewrite_in_parallel" translatable="false">Rewrite in Parallel</string>
    <string name="request_unknown_source_permission" translatable="false">Needs to switch unknown source permission on to install mod framework, open settings?</string>
    <string name="settings_rewrite_missing" translatable="false">Rewrite Missing</string>
    <string name="settings_set_app_name" translatable="false">Patched App Name</string>
    <string name="request_all_files_access_permission" translatable="false">Need all files access permission on Android Q or above to install mod framework, continue?</string>
    <string name="app_icon_list_label" translatable="false">App icon</string>
    <string name="skipping" translatable="false">"Skipping "</string>
    <string name="unselected" translatable="false" >unselected</string>
    <string name="not_apk" translatable="false" >>not_apk</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="repackaging_apk" translatable="false">The APK is being repackaged...</string>
    <string name="failed_to_repack" translatable="false">Repack failed</string>
    <string name="pairip_warning" translatable="false" >pairip_warning</string>
    <string name="sanitizing_manifest" translatable="false" >sanitizing_manifest</string>
    <string name="removed_table_entry" translatable="false" >removed_table_entry</string>
    <string name="saving" translatable="false" >saving</string>
    <string name="signing" translatable="false" >signing</string>
    <string name="searching" translatable="false" >searching</string>
    <string name="mismatch" translatable="false" > mismatch</string>
    <string name="mismatch_base" translatable="false" >mismatch_base</string>
    <string name="extracting_assemblies" translatable="false">Unzip the assembly file</string>
    <string name="unpacking_smapi_project" translatable="false">Unpacking SMAPI project...</string>
    <string name="failed_to_unpack_smapi_project" translatable="false">Failed to unpack SMAPI project</string>
    <string name="error_base0_not_found" translatable="false">Base APK (base_0.apk) not found</string>
    <string name="failed_to_extract_dlls" translatable="false">Failed to extract required DLLs</string>
    <string name="extracting_game_content" translatable="false">Extracting game content...</string>
</resources>
