<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_install"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_install" />
        <item
            android:id="@+id/nav_config"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_config" />
        <item
            android:id="@+id/nav_download"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_download" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_about" />
    </group>
</menu>
