<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">
    <fragment
        android:id="@+id/nav_main"
        android:name="com.zane.smapiinstaller.ui.main.MainTabsFragment"
        android:label="@string/nav_header_title"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_nav_main_to_nav_download"
            app:destination="@id/nav_download" />
    </fragment>
    <fragment
        android:id="@+id/install_fragment"
        android:name="com.zane.smapiinstaller.ui.install.InstallFragment"
        android:label="@string/menu_install"
        tools:layout="@layout/fragment_install">
    </fragment>
    <fragment
        android:id="@+id/config_edit_fragment"
        android:name="com.zane.smapiinstaller.ui.config.ConfigEditFragment"
        android:label="@string/menu_config_edit" >
        <argument android:name="configPath" app:argType="string"/>
        <argument android:name="virtualKeyboardConfigMode" android:defaultValue="false" app:argType="boolean"/>
        <argument android:name="editable" android:defaultValue="true" app:argType="boolean"/>
    </fragment>
    <fragment
        android:id="@+id/nav_config"
        android:name="com.zane.smapiinstaller.ui.config.ConfigFragment"
        android:label="@string/menu_config"
        tools:layout="@layout/fragment_config">
    </fragment>
    <fragment
        android:id="@+id/nav_help"
        android:name="com.zane.smapiinstaller.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help">
    </fragment>
    <fragment
        android:id="@+id/nav_download"
        android:name="com.zane.smapiinstaller.ui.download.DownloadableContentFragment"
        android:label="@string/menu_download"
        tools:layout="@layout/fragment_download_content_list" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.zane.smapiinstaller.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_mod_update"
        android:name="com.zane.smapiinstaller.ui.update.ModUpdateFragment"
        android:label="@string/settings_check_for_updates"
        tools:layout="@layout/fragment_mod_update_list">
        <argument
            android:name="updateInfoListJson"
            android:defaultValue="{}"
            app:argType="string" />
    </fragment>
    <action
        android:id="@+id/action_nav_any_to_config_edit_fragment"
        app:destination="@id/config_edit_fragment">
        <argument android:name="configPath" app:argType="string"/>
        <argument android:name="editable" android:defaultValue="true" app:argType="boolean"/>
    </action>
    <action
        android:id="@+id/action_nav_any_to_mod_update_fragment"
        app:destination="@id/nav_mod_update" >
        <argument android:name="updateInfoListJson" app:argType="string"/>
    </action>
</navigation>