<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="all">
        <item
            android:id="@+id/settings_verbose_logging"
            android:orderInCategory="100"
            android:title="@string/settings_verbose_logging"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings_check_for_updates"
            android:orderInCategory="101"
            android:title="@string/settings_check_for_updates"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings_developer_mode"
            android:orderInCategory="102"
            android:title="@string/settings_developer_mode"
            app:showAsAction="never" />
    </group>
</menu>
